--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,28 @@ header h1{
   margin: 0 auto;
   text-align: center;
 }
+h2{
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f5e5e5;
+}
+.content{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  padding:20px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  gap:50px;
+}
+
+@media screen and (max-width:768px) {
+  .content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    padding:20px;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1200px;
+    gap:50px;
+  }
+}
